package domain

import "time"

type HydraulicReport struct {
	ID                string          `json:"id"`
	BookingID         string          `json:"booking_id"`
	TechnicianID      string          `json:"technician_id"`
	EquipmentID       *string         `json:"equipment_id,omitempty"`
	Status            string          `json:"status"` // submitted | rejected
	RejectionReason   *string         `json:"rejection_reason,omitempty"`
	PressureBeforeBar *int            `json:"pressure_before_bar,omitempty"`
	PressureAfterBar  *int            `json:"pressure_after_bar,omitempty"`
	OilCondition      *string         `json:"oil_condition,omitempty"`
	OilLevel          *string         `json:"oil_level,omitempty"`
	LeakLocation      *string         `json:"leak_location,omitempty"`
	LeakSeverity      *string         `json:"leak_severity,omitempty"`
	PartsReplaced        []PartReplaced             `json:"parts_replaced"`
	PhotoURLs            []ReportPhoto              `json:"photo_urls"`
	PDFUrl               *string                    `json:"pdf_url,omitempty"`
	WorkDescription      string                     `json:"work_description"`
	Recommendations      string                     `json:"recommendations"`
	MaintenanceChecklist []MaintenanceChecklistItem `json:"maintenance_checklist,omitempty"`
	CreatedAt            time.Time                  `json:"created_at"`
	UpdatedAt            time.Time                  `json:"updated_at"`

	// Relations
	InspectionItems []InspectionItem `json:"inspection_items,omitempty"`
	TechnicianName  string           `json:"technician_name,omitempty"`
	EquipmentName   string           `json:"equipment_name,omitempty"`
	BookingInfo     *Booking         `json:"booking_info,omitempty"`
}

type PartReplaced struct {
	Name       string `json:"name"`
	PartNumber string `json:"part_number"`
	Qty        int    `json:"qty"`
}

type ReportPhoto struct {
	URL  string `json:"url"`
	Type string `json:"type"` // before | after | damage
}

type InspectionItem struct {
	ID             string                 `json:"id"`
	ReportID       string                 `json:"report_id"`
	ItemType       string                 `json:"item_type"` // hose | cylinder | pump
	ItemCode       string                 `json:"item_code"`
	LocationDesc   string                 `json:"location_desc"`
	Specifications map[string]interface{} `json:"specifications"`
	Condition      string                 `json:"condition"`
	Recommendation string                 `json:"recommendation"`
	PhotoURL       *string                `json:"photo_url,omitempty"`
	Notes          string                 `json:"notes"`
	CreatedAt      time.Time              `json:"created_at"`
}

// Fitting untuk hose
type HoseFitting struct {
	Standard string `json:"standard"` // ORFS|BSP|NPT|JIC|Metric|SAE_F61|SAE_F62
	Angle    string `json:"angle"`    // straight|45|90|90_long
	Gender   string `json:"gender"`   // male|female
}

type MaintenanceChecklistItem struct {
	Item   string `json:"item"`
	Status string `json:"status"` // done | skip | not_applicable
	Notes  string `json:"notes,omitempty"`
}

// Request structs
type CreateReportRequest struct {
	EquipmentID     *string        `json:"equipment_id"`
	WorkDescription string         `json:"work_description" binding:"required"`
	Recommendations string         `json:"recommendations"`
	// Repair fields
	PressureBeforeBar *int          `json:"pressure_before_bar"`
	PressureAfterBar  *int          `json:"pressure_after_bar"`
	OilCondition      *string       `json:"oil_condition"`
	OilLevel          *string       `json:"oil_level"`
	LeakLocation      *string       `json:"leak_location"`
	LeakSeverity      *string       `json:"leak_severity"`
	PartsReplaced     []PartReplaced `json:"parts_replaced"`
	PhotoURLs         []ReportPhoto  `json:"photo_urls"`
	// Inspeksi fields
	InspectionItems []CreateInspectionItemRequest `json:"inspection_items"`
	// Maintenance fields
	MaintenanceChecklist []MaintenanceChecklistItem `json:"maintenance_checklist"`
}

type UpdateReportRequest struct {
	WorkDescription      string                     `json:"work_description" binding:"required"`
	Recommendations      string                     `json:"recommendations"`
	PressureBeforeBar    *int                       `json:"pressure_before_bar"`
	PressureAfterBar     *int                       `json:"pressure_after_bar"`
	OilCondition         *string                    `json:"oil_condition"`
	OilLevel             *string                    `json:"oil_level"`
	LeakLocation         *string                    `json:"leak_location"`
	LeakSeverity         *string                    `json:"leak_severity"`
	PartsReplaced        []PartReplaced             `json:"parts_replaced"`
	PhotoURLs            []ReportPhoto              `json:"photo_urls"`
	InspectionItems      []CreateInspectionItemRequest `json:"inspection_items"`
	MaintenanceChecklist []MaintenanceChecklistItem `json:"maintenance_checklist"`
}

type CreateInspectionItemRequest struct {
	ItemType       string                 `json:"item_type" binding:"required,oneof=hose cylinder pump"`
	ItemCode       string                 `json:"item_code"`
	LocationDesc   string                 `json:"location_desc"`
	Specifications map[string]interface{} `json:"specifications" binding:"required"`
	Condition      string                 `json:"condition" binding:"required,oneof=good wear cracked leaking critical"`
	Recommendation string                 `json:"recommendation" binding:"required,oneof=no_action monitor schedule_replace urgent_replace"`
	PhotoURL       *string                `json:"photo_url"`
	Notes          string                 `json:"notes"`
}

type ReportRepository interface {
	Create(report *HydraulicReport) error
	CreateInspectionItems(items []InspectionItem) error
	FindByBookingID(bookingID string) (*HydraulicReport, error)
	FindAllByBookingID(bookingID string) ([]HydraulicReport, error)
	FindByID(id string) (*HydraulicReport, error)
	FindByTechnicianID(technicianID string) ([]HydraulicReport, error)
	UpdatePDFUrl(reportID, pdfURL string) error
	UpdateReport(reportID string, req UpdateReportRequest) error
	RejectReports(bookingID, reason string) error
	CountByBookingID(bookingID string) (int, error)
}

type ReportUsecase interface {
	CreateReport(bookingID, technicianID string, req CreateReportRequest) (*HydraulicReport, error)
	GetReportByBookingID(bookingID string) (*HydraulicReport, error)
	GetAllReportsByBookingID(bookingID string) ([]HydraulicReport, error)
	GetMyReports(technicianID string) ([]HydraulicReport, error)
	UpdateReport(reportID, technicianID string, req UpdateReportRequest) (*HydraulicReport, error)
}

type PDFReportGenerator interface {
	GenerateReport(report *HydraulicReport, booking *Booking) ([]byte, error)
}

type FileUploader interface {
	Upload(data []byte, filename, contentType string) (string, error)
}